--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,15 @@
 <h1>{{title}}</h1>
+
+
 <p>Welcome to {{title}}</p>
+
+<p>
+<form action="/artist-search" method="get">
+
+    {{!-- <label for="artistInput">Artist:</label> --}}
+
+    <input type="text" name="artist" id="artist" name = "artist"> <br></form>br>/>
+
+    <button type="submit">Search for an Artist</button>
+
+    </p>
