--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,15 +1,7 @@
-<h1>{{title}}</h1>
+<h1>Search For An Artist</h1>
 
+<form action="/artist-search" method="GET">
+    <input type="text" name="artist" />
+    <button type="submit">Search</button>
 
-<p>Welcome to {{title}}</p>
-
-<p>
-<form action="/artist-search" method="get">
-
-    {{!-- <label for="artistInput">Artist:</label> --}}
-
-    <input type="text" name="artist" id="artist" name = "artist"> <br></form>br>/>
-
-    <button type="submit">Search for an Artist</button>
-
-    </p>
+</form>
