finished lab spotify

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("/public/images/background.jpg");
+  background-image: url("/public/images/spotify-background.jpeg");
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
